refactor: метод add, TaskManager от Managers, LinkedList, Map, final