@@ -1,12 +1,12 @@
 package Managment;
 
 import Tasks.Task;
-import java.util.ArrayList;
+import java.util.LinkedList;
 import java.util.List;
 
 public class InMemoryHistoryManager implements HistoryManager{
     private static final int TASKS_HISTORY_SIZE = 10;
-    private final List<Task> history = new ArrayList<>();
+    private final LinkedList<Task> history = new LinkedList<>();
 
     @Override
     public List<Task> getHistory() {
@@ -15,11 +15,9 @@ public class InMemoryHistoryManager implements HistoryManager{
 
     @Override
     public void add(Task task) {
-        if (history.size() < TASKS_HISTORY_SIZE) {
-            history.add(task);
-        } else {
-            history.remove(0);
-            history.add(task);
+        if (history.size() == TASKS_HISTORY_SIZE) {
+            history.removeFirst();
         }
+        history.add(task);
     }
 }
